--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@phosphor-icons/react": "^2.0.14",
     "@prisma/client": "^5.5.2",
     "@types/node-fetch": "^2.6.8",
+    "dayjs": "^1.11.10",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
