--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@phosphor-icons/react": "^2.0.14",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@types/node-fetch": "^2.6.8",
     "dayjs": "^1.11.10",
