--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@types/node-fetch": "^2.6.8",
     "dayjs": "^1.11.10",
+    "dayjs-plugin-utc": "^0.1.2",
     "googleapis": "^128.0.0",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
