--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "resend": "^2.0.0",
     "swr": "^2.2.4",
     "zod": "^3.22.4"
   },
