--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@ts-safeql/eslint-plugin": "^2.0.3",
     "@types/jest": "^29.5.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -49,6 +50,7 @@
     "eslint-plugin-testing-library": "^6.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "libpg-query": "^15.0.2",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "tailwindcss": "^3",
