--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
     "googleapis": "^128.0.0",
+    "local-storage": "^2.0.0",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
@@ -39,7 +40,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@ts-safeql/eslint-plugin": "^2.0.3",
     "@types/jest": "^29.5.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
